rnsc/tests/snapshots/error-parser-class_body-unknown_directive_in_body.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MyClass
.super java/lang/Object
.unknown_directive
.class_end
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/parser/class_body/unknown_directive_in_body.rns:3:1 ]
   │
 3 │ .unknown_directive
   │ ─────────┬────────  
   │          ╰────────── '.unknown_directive' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
