rnsc/tests/snapshots/error-parser-class_body-with_errors_before_class_body.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method shouldn't be here
.class 42
unexpected
----- STDERR -----
[E-008] Error: unexpected directive before class definition
   ╭─[ test_data/integration/error/parser/class_body/with_errors_before_class_body.rns:1:1 ]
   │
 1 │ .method shouldn't be here
   │ ───┬───  
   │    ╰───── valid context for .method directive is: 'class body'.
   │ 
   │ Help: Make sure the file starts with a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-008
───╯
[E-009] Error: unexpected integer where a class name is required
   ╭─[ test_data/integration/error/parser/class_body/with_errors_before_class_body.rns:2:8 ]
   │
 2 │ .class 42
   │        ─┬  
   │         ╰── attempted to set integer as class name, but it can't be resolved as either an identifier or a type hint
   │ 
   │ Help: The constant pool requires each entry to have a specific kind.
   │       The parser can't determine whether you intended an identifier or an integer from the bare token alone.
   │       
   │       To treat it as an identifier (will resolve to the appropriate entry kind from context):
   │       #"42"
   │       
   │       To explicitly store it as an @integer constant pool entry:
   │       @integer 42
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-009
───╯
[E-007] Error: unexpected token in class body: 'Identifier(Spanned { value: "unexpected", span: Span { byte_start: 36, byte_end: 46, line: 2, col_start: 0, col_end: 10 } })'
   ╭─[ test_data/integration/error/parser/class_body/with_errors_before_class_body.rns:3:1 ]
   │
 3 │ unexpected
   │ ─────┬────  
   │      ╰────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-007
───╯
----- HASH -----
not generated
