rnsc/tests/snapshots/error-parser-class_body-with_errors_before_class_body2.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class 42
unexpected
----- STDERR -----
[E-007] Error: unexpected token in class body: 'Identifier(Spanned { value: "unexpected", span: Span { byte_start: 10, byte_end: 20, line: 1, col_start: 0, col_end: 10 } })'
   ╭─[ test_data/integration/error/parser/class_body/with_errors_before_class_body2.rns:2:1 ]
   │
 2 │ unexpected
   │ ─────┬────  
   │      ╰────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-007
───╯
----- HASH -----
not generated
