rnsc/tests/snapshots/error-parser-class_header-access_flags-bridge.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class bridge HelloWorld
.super java/lang/Object
.class_end
----- STDERR -----
[E-015] Error: invalid class access flag 'bridge'
   ╭─[ test_data/rns_integration/error/parser/class_header/access_flags/bridge.rns:1:8 ]
   │
 1 │ .class bridge HelloWorld
   │        ───┬──  
   │           ╰──── 'bridge' is not a valid class access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-015
───╯
----- JAVAP -----
not generated
